[workspace]
members = ["tcpstream-postgres", "tauri-sqlite/src-tauri", "poem-graphql-mysql"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
apalis = { version = "1.0.0-rc.6", features = ["tracing"] }
serde = "1.0"
serde_json = "1"
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
