[package]
name = "poem-graphql-mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["opentelemetry"] }
async-graphql-poem = "7.0.17"
opentelemetry = "0.27.0"
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
poem = "3.1.11"
thiserror = "2"
tokio = { workspace = true }
apalis = { workspace = true }
apalis-mysql = "1.0.0-rc.6"
futures = { workspace = true }
apalis-board-api = { version = "1.0.0-rc.6", features = ["sse"] }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
apalis-codec = "0.1.0-rc.6"
tracing = "0.1"
